# dmx-vst

./: .gitignore  CMakeLists.txt  DEVLOG.md  GITHUB_SETUP_SPANISH.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md
.github/workflows/: release.yml
apps/automator/: AudioPlayer.h  AutomatorComponent.cpp  AutomatorComponent.h  ChoreoPanel.h  ChoreographyEngine.h  CustomFixturePanel.h  DefaultRig.h  DemucsProcessProvider.h  DmxPreview.h  DmxShow.h  LibraryPanel.h  Main.cpp  ManualShowEditor.h  MotionFigure.h  MusicLibrary.h  OfflineAnalyzer.h  PianoRollPanel.h  PlaybackEngine.h  PlaylistManager.h  PreferencesPanel.h  PreferredColorsPanel.h  PreprocessWorker.h  SectionBar.h  SequenceEditorPanel.h  SidecarStore.h  SongChoreoPanel.h  SongPropertiesPanel.h  StageVisualizer.h  StemAssignPanel.h  StemSeparator.h  Track.h  TrackAnalysis.h
installer/: LuxSync-VST3-Windows.nsi
scripts/: build-macos.sh  build-windows.sh  package-windows.ps1  setup-github.bat  setup-github.sh
source/: ArtNetSender.cpp  ArtNetSender.h  AudioAnalyzer.cpp  AudioAnalyzer.h  AudioPanel.cpp  AudioPanel.h  ChannelRow.cpp  ChannelRow.h  ConnectorPanel.cpp  ConnectorPanel.h  EnttecSender.cpp  EnttecSender.h  FixtureEditor.cpp  FixtureEditor.h  FixtureModel.cpp  FixtureModel.h  FixturesPanel.cpp  FixturesPanel.h  KnobLookAndFeel.h  LiveAnalyzer.h  LuxLookAndFeel.h  OutputPanel.cpp  OutputPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Reactive.h  ReactivePanel.cpp  ReactivePanel.h  SacnSender.cpp  SacnSender.h  Sequence.h  SerialPort.cpp  SerialPort.h  SharedHub.h  TimelinePanel.cpp  TimelinePanel.h  WaveformView.cpp  WaveformView.h
